dist/1.0/bin/sample/retrieveUnpackaged/objects/Case_Component__c.object
<CustomObject>
    <description>Components related to Case</description>
    <fields>
        <fullName>CSR_Id__c</fullName>
        <description>ID from CSR Database</description>
        <formula>Service_Component__r.CSR_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID from CSR Database</inlineHelpText>
        <label>CSR Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <description>Case Number</description>
        <inlineHelpText>Case Number</inlineHelpText>
        <label>Case No</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Components</relationshipLabel>
        <relationshipName>Case_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Circuit_ID__c</fullName>
        <description>Circuit ID of related Component</description>
        <formula>Service_Component__r.Circuit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Circuit ID of related Component</inlineHelpText>
        <label>Circuit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <description>Name of related Component</description>
        <formula>Service_Component__r.Component__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of related Component</inlineHelpText>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <description>Service Component related to Case</description>
        <inlineHelpText>Service Component related to Case</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Case Components</relationshipLabel>
        <relationshipName>Case_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Component</label>
    <nameField>
        <displayFormat>CCO{000000000}</displayFormat>
        <label>Case Component No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>